--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,30 @@ h1 {
     background-color: white;
 }
 
+/* link non visitato */
+a:link {
+    color: #0098ff;
+    text-decoration: none;
+  }
+  
+  /* link visitato */
+  a:visited {
+    color: #0098ff;
+    text-decoration: none;
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: #0098ff;
+    background-color: #BCE3FF;
+    text-decoration: underline;
+  }
+  
+  /* link selezionato */
+  a:active {
+    background-color: #BCE3FF;
+  }
+
 .container {
    max-width: 1280px;
    margin: 0 auto;
@@ -111,53 +135,54 @@ menu a.is-active,  .menu a:hover {
     z-index: -1;
 }
 
-.corpobox {
-    display: flex;
-    margin-right: auto;
-    margin-left: auto;
+.titolopag1 {
     position: absolute;
     z-index: 1;
     top: 142px;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+    color: white;
+    font-size: 65px;
+    font-weight: bold;
+}
+
+.titolopag2 {
+    position: absolute;
+    z-index: 1;
+    top: 142px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 65px;
+    font-weight: bold;
+}
+
+.corpobox2 {
+    display: flex;
+    justify-content: space-around;
+    position: absolute;
+    z-index: 1;
+    top: 600px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
     
-    width: 700px;
-    height: 180px;
-    padding: 10px;
-    border: none;
-    margin: 0;
+}
+
+.box1 {
+    border-radius: 8px;
     background-color: white;
-    color: black;
-    border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 12px;
+    margin-right: 10px;
+    width: 800px;
 }
 
-.titolo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 900;
-    text-align: right;
-    margin-left: 20px;
-    margin-right: 10px;
-    font-size: 40px;
-}
-
-.testo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    margin-right: 10px;
-    margin-left: 20px;
-    border: solid #BCE3FF 4px;
-    padding: 15px;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    border-radius: 8px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+.titolo2 {
+    font-size: 34px;
+    font-weight: bold;
 }
 
 footer {
