--- a/styles.css
+++ b/styles.css
@@ -159,12 +159,24 @@ menu a.is-active,  .menu a:hover {
     font-weight: bold;
 }
 
+.titolopag3 {
+    position: absolute;
+    z-index: 1;
+    top: 142px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 65px;
+    font-weight: bold;
+}
+
 .corpobox2 {
     display: flex;
     justify-content: space-around;
     position: absolute;
     z-index: 1;
-    top: 600px;
+    top: 700px;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
@@ -185,12 +197,91 @@ menu a.is-active,  .menu a:hover {
     font-weight: bold;
 }
 
-footer {
+.corpo1 {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #0098FF;
-    position: fixed;
-    bottom: 20px;
+    justify-content: space-around;
+    position: absolute;
+    margin-top: 200px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 12px;
+    margin-right: 10px;
+    width: 500px;
 }
 
+.opzioni {
+    display: flex;
+    overflow: hidden;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 235px;
+    position: absolute;
+    margin-top: 300px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 15px;
+}
+
+.button {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.button-32 {
+  background-color: #0098ff;
+  border-radius: 12px;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  padding: 10px 15px;
+  text-align: center;
+  transition: 200ms;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  border: 0;
+  font-size: 16px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-32:not(:disabled):hover,
+.button-32:not(:disabled):focus {
+  outline: 0;
+  background: #0b85d6;
+  box-shadow: 0 0 0 2px rgba(0,0,0,.2), 0 3px 8px 0 rgba(0,0,0,.15);
+}
+
+.button-32:disabled {
+  filter: saturate(0.2) opacity(0.5);
+  -webkit-filter: saturate(0.2) opacity(0.5);
+  cursor: not-allowed;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #0098ff;
+    color: white;
+    text-align: center;
+}
+
+.contfoot {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.nome {
+    font-weight: bold;
+}
