--- a/styles.css
+++ b/styles.css
@@ -215,24 +215,41 @@ menu a.is-active,  .menu a:hover {
 
 .opzioni {
     display: flex;
-    overflow: hidden;
-    justify-content: space-between;
-    flex-direction: column;
-    height: 235px;
     position: absolute;
-    margin-top: 300px;
+    margin-top: 340px;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+}
+
+.opzione1 {
     background-color: white;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding: 15px;
+    margin-right: 10px;
+    border: solid #BCE3FF 4px;
+}
+
+.opzione2 {
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 15px;
+    margin-left: 10px;
+    border: solid #BCE3FF 4px;
 }
 
 .button {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    padding-top: 10px;
+}
+
+.button2 {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
 }
 
 .button-32 {
@@ -266,6 +283,38 @@ menu a.is-active,  .menu a:hover {
   -webkit-filter: saturate(0.2) opacity(0.5);
   cursor: not-allowed;
 }
+
+.button-34 {
+    background-color: #0098ff;
+    border-radius: 12px;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+    padding: 10px 15px;
+    text-align: center;
+    transition: 200ms;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    border: 0;
+    font-size: 16px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .button-34:not(:disabled):hover,
+  .button-34:not(:disabled):focus {
+    outline: 0;
+    background: #0b85d6;
+    box-shadow: 0 0 0 2px rgba(0,0,0,.2), 0 3px 8px 0 rgba(0,0,0,.15);
+  }
+  
+  .button-34:disabled {
+    filter: saturate(0.2) opacity(0.5);
+    -webkit-filter: saturate(0.2) opacity(0.5);
+    cursor: not-allowed;
+  }
 
 .footer {
     position: fixed;
